--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,7 +59,9 @@
 }
 
 body {
-  min-height: 100vh;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   color: var(--color-text);
   background: var(--color-background);
   transition:
