--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,8 @@
 }
 
 /* Remove any constraints that limit full screen usage */
-html, body {
+html,
+body {
   height: 100%;
   overflow-x: hidden;
 }
